Boton conversión divisa

--- a/src/views/carrito.html
+++ b/src/views/carrito.html
@@ -69,13 +69,12 @@
           <div class="row">
             <div class="col-md-6">  
               <button type="button" class="boton third" id="botonLimpiar">
-                <!-- <i class="bi bi-trash"></i>  -->
                 Limpiar
               </button>
             </div>
             <div class="col-md-6">
-              <button type="button" class="boton third" id="botonLimpiar">
-                <!-- <i class=" bi bi-cash-coin"></i>    -->
+              <button type="button" class="boton botonCOP third" id="botonCOP">
+                <i class=" bi bi-cash-coin"></i>   
                   COP - USD
               </button>
             </div>   
