--- a/src/views/ampliarInfo.html
+++ b/src/views/ampliarInfo.html
@@ -66,7 +66,9 @@
                         </div>
                         <div class="col-12 col-md-6 border start">
                             <h4 id="nombre" class="fw-bold"></h4>
-                            <h4 id="precio" class="fw-bold"></h4>
+                            <h4 id="precio" class="fw-bold"></h4><br>
+                              <h4 class="" id="descripcion"> </h4>
+                      
                                 <i id="estrella1" class="bi bi-star-fill"></i>
                                 <i id="estrella2"class="bi bi-star-fill"></i>
                                 <i id="estrella3"class="bi bi-star-fill"></i>
@@ -95,8 +97,7 @@
             </div>
 
             <div class="row">
-              <div class="col-12 col-md-6">
-              <h4 id="descripcion"> </h4>
+             
             </div>
             <div class="col-12 col-md-6">
 
