--- a/assets/styles/estilos.css
+++ b/assets/styles/estilos.css
@@ -105,10 +105,7 @@ h2{ font-size:large}
 
   width: 400px;
 }
-  /* .contenedor{
-
-    display: flex;
-    justify-content: center;
-align-items: flex-end;    
-
-  } */
+.letras{
+  color: #b770c3;
+  text-shadow:  -3px -3px #ffffff, 3px -3px #ffffff, 3px 3px #f3f3f2;
+}
