--- a/src/views/ampliarInfo.html
+++ b/src/views/ampliarInfo.html
@@ -65,9 +65,9 @@
                             <img id="foto" src="" class="img-fluid w-100 h-100" alt="">
                         </div>
                         <div class="col-12 col-md-6 border start">
-                            <h4 id="nombre" class="fw-bold"></h4>
+                            <h4 id="nombre" class="fw-bold letras"></h4>
                             <h4 id="precio" class="fw-bold"></h4><br>
-                              <h4 class="" id="descripcion"> </h4>
+                              <h4 id="descripcion"> </h4>
                       
                                 <i id="estrella1" class="bi bi-star-fill"></i>
                                 <i id="estrella2"class="bi bi-star-fill"></i>
@@ -96,12 +96,13 @@
               Producto Agregado correctamente
             </div>
 
-            <div class="row">
-             
-            </div>
-            <div class="col-12 col-md-6">
+            <div>
+              <h1 class="fw-bold letras" >Productos Relacionados</h1>
+              <div class="row" id="fila">
 
+              </div>
             </div>
+            
         </main>
         <footer>
           <section class="pie">
@@ -121,7 +122,7 @@
         </section>
           </section>
         </footer> 
-        <script src="../controllers/controladorcompra.js"></script>
+        <script src="../controllers/controladorcompra.js" type="module"></script>
         <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
