--- a/assets/styles/estilos.css
+++ b/assets/styles/estilos.css
@@ -96,10 +96,7 @@ h2{ font-size:large}
     width: 200px;
  
   }
-/* .botonesf{
-  
-  
-} */
+
 .limpiar{
 
 
@@ -108,4 +105,69 @@ h2{ font-size:large}
 .letras{
   color: #b770c3;
   text-shadow:  -3px -3px #ffffff, 3px -3px #ffffff, 3px 3px #f3f3f2;
+}
+
+
+.containercarousel {
+  margin: 100px;
+  height: 400px;
+  width: 1000px;
+  top: 60px;
+  left: calc(50% - 300px);
+  display: flex;
+}
+
+.cardcarousel {
+  display: flex;
+  height: 280px;
+  width: 200px;
+  background-color: #ad9cd0;
+  border-radius: 10px;
+  box-shadow: -1rem 0 3rem #ad9cd0;
+  margin-left: 200px;
+  transition: 0.4s ease-out;
+  position: relative;
+  left: 0px;
+}
+
+.cardcarousel:not(:first-child) {
+    margin-left: -50px;
+}
+
+.cardcarousel:hover {
+  transform: translateY(-20px);
+  transition: 0.4s ease-out;
+}
+
+.cardcarousel:hover ~ .card {
+  position: relative;
+  left: 50px;
+  transition: 0.4s ease-out;
+}
+
+.titlecarousel {
+  color: white;
+  font-weight: 300;
+  position: absolute;
+   left: 20px;
+  top: 15px; 
+  
+}
+
+.imagencarousel{
+
+  
+
+}
+
+
+.cardcarousel:hover .filledbar {
+  width: 120px;
+  transition: 0.4s ease-out;
+}
+
+
+.cardcarousel:hover .stroke {
+  stroke-dashoffset: 100;
+  transition: 0.6s ease-out;
 }
