--- a/src/views/formulario.html
+++ b/src/views/formulario.html
@@ -58,20 +58,28 @@
 
 
 
-
-
-  <form>
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email address</label>
-      <input id="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    </div>
-    <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-      <input id="password" type="password" class="form-control" id="exampleInputPassword1">
-    </div>
-   
-    <button id="submit" type="submit" class="btn btn-primary">Ingresar</button>
-  </form>
+  <div class="container">
+    <div class="row">
+      <form>
+        <div class="col-md-5">
+          <img src="../../assets/img/login.png" alt="">
+        </div>
+        <div class="col-md-6 mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input id="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        </div>
+      
+      </div>
+      <div class="row">
+        <div class="col-md-6 mb-3">
+          <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+          <input id="password" type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+      </div>      
+      
+        <button id="submit" type="submit" class="btn btn-primary">Ingresar</button>
+      </form>
+  </div> 
 
 
       <footer>
