--- a/src/views/carrito.html
+++ b/src/views/carrito.html
@@ -57,6 +57,7 @@
     </header> 
     
     <main>
+      <center>
       <div id="contenedor" class="container my-5">
       </div>
           
@@ -66,7 +67,7 @@
 
           <h1 class="fw-bold" id="total"> </h1>
 
-          <div class="row">
+          <div class="row" id="rowBotones">
             <div class="col-md-6">  
               <button type="button" class="boton third" id="botonLimpiar">
                 Limpiar
@@ -79,8 +80,9 @@
               </button>
             </div>   
           </div>
+        </center>
            <center> 
-            <button type="button" class="boton third">
+            <button type="button" id="botonPagar" class="boton third">
               Pagar
             </button>
           </center>
@@ -120,7 +122,7 @@
           <H3>Contacto: 3108016744</H3>
           <h3>Correo: vilu.makeup@makeup.com</h3>
           <h3>Owner: Luisa Ospina</h3>
-          <h3>GitHub: https://github.com/Luisa1710</h3>
+          <a href="https://github.com/Luisa1710">
         </section>
       <section>
         <img src="../../assets/img/email.png" alt=""><br><br>
