--- a/src/views/formulario.html
+++ b/src/views/formulario.html
@@ -58,27 +58,24 @@
 
 
 
-  <div class="container">
-    <div class="row">
-      <form>
+  <div class="container-fluid ">
+    <div class="row col-12 ">
+      
         <div class="col-md-5">
-          <img src="../../assets/img/login.png" alt="">
+          <img src="../../assets/img/login.png" class="img-fluid " alt="">
         </div>
-        <div class="col-md-6 mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input id="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
+        <div class="col-md-6">
+          <form>
+            <label for="exampleInputPassword1" class="form-label mt-5 pt-5">Contraseña</label>
+            <input id="password" type="password" class="form-control" id="exampleInputPassword1">
+            <label for="exampleInputEmail1" class="form-label">Email address</label>
+            <input id="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">    
+            <button id="submit" type="submit" class="boton third mt-5 ">Ingresar</button>
+          </form>
         </div>
-      
-      </div>
-      <div class="row">
-        <div class="col-md-6 mb-3">
-          <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-          <input id="password" type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-      </div>      
-      
-        <button id="submit" type="submit" class="btn btn-primary">Ingresar</button>
-      </form>
+              
+       
   </div> 
 
 
@@ -90,7 +87,7 @@
           <H3>Contacto: 3108016744</H3>
           <h3>Correo: vilu.makeup@makeup.com</h3>
           <h3>Owner: Luisa Ospina</h3>
-          <h3>GitHub: https://github.com/Luisa1710</h3>
+          <a href="https://github.com/Luisa1710">
         </section>
       <section>
         <img src="../../assets/img/email.png" alt=""><br><br>
